# katas

./: CMakeLists.txt  README.md
data_munging/: CMakeLists.txt  part1.cpp  part1.h  tests_part1.cpp
karate_chop/: CMakeLists.txt  chopv1.txx  chopv2.txx  chopv3.txx  tests.cpp
